<resources>
    <string name="app_name">fitApp</string>
    <string name="running">Berlari</string>
    <string name="find_route">Temukan rute</string>
    <string name="zoom_in">Zoom in</string>
    <string name="zoom_out">Zoom out</string>
    <string name="reset_route">Reset rute</string>
    <string name="back">Kembali</string>
    <string name="get_route">Dapatkan rute</string>
    <string name="change_route">Ubah rute</string>
    <string name="choose_starting_point">Pilih titik awal</string>
    <string name="building_picture">Gambar bangunan</string>
    <string name="building">Bangunan</string>
    <string name="determine_distance">Tentukan jarak</string>
    <string name="distance">Jarak</string>
    <string name="choose_algorithm">Pilih algoritma</string>
    <string name="backtracking_algorithm">Backtracking algorithm</string>
    <string name="dijkstras_algorithm">Dijkstra\'s algorithm</string>
    <string name="detail">Detail</string>
    <string name="prev">Prev</string>
    <string name="next">Next</string>
    <string name="app_info">Informasi aplikasi</string>
    <string name="history">Riwayat</string>
    <string name="date">Tanggal</string>
    <string name="starting_point">Titik awal</string>
    <string name="end_point">Titik akhir</string>
    <string name="algorithm">Algoritma</string>
    <string name="running_time">Running time</string>
    <string name="input_distance">Jarak input</string>
    <string name="output_distance">Jarak output</string>
    <string name="no_history_yet">Belum ada riwayat</string>
    <string name="clear_history">Bersihkan riwayat</string>
    <string name="about_app">fitApp adalah sebuah aplikasi yang akan membantu kamu dalam menentukan rute yang tepat untuk berlari berdasarkan jarak yang kamu mau.</string>
    <string name="start_guide">Masuk ke halaman Berlari untuk memulai.</string>
    <string name="home">Beranda</string>
</resources>